more on arrangements

--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -110,8 +110,8 @@
 \newcommandx{\fPol}[2][1 = \arrangement, 2 = x]{\b{f}_{#1}(#2)} % face polynomial
 \newcommandx{\bPol}[2][1 = \arrangement, 2 = x]{\b{b}_{#1}(#2)} % bounded face polynomial
 \newcommandx{\flatPoset}[1][1 = \arrangement]{\mathsf{Fl}(#1)} % intersection poset
-\newcommandx{\charPol}[2][1 = y, 2 = \arrangement]{\b{\chi}_{#2}(#1)} % characteristic polynomial
-\newcommandx{\mobPol}[3][1 = x, 2 = y, 3 = \arrangement]{\b{\mu}_{#3}(#1, #2)} % Mobius polynomial
+\newcommandx{\charPol}[2][1 = \arrangement, 2 = y]{\b{\chi}_{#1}(#2)} % characteristic polynomial
+\newcommandx{\mobPol}[3][1 = \arrangement, 2 = x, 3 = y]{\b{\mu}_{#1}(#2, #3)} % Mobius polynomial
 \newcommandx{\partitionPoset}[1][1 = n]{\mathsf{Pa}_{#1}} % partition poset
 \newcommandx{\forestPoset}[2][1 = n, 2 = \ell]{\mathsf{Fo}_{#1}^{#2}} % forest poset
 
