more on arrangements

--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -51,6 +51,7 @@ where~$F \le G$ ranges over all intervals of the flat poset~$\flatPoset$, and~$\
 \]
 for all~$F, G, H \in \flatPoset$.
 \vincent{Whitney-number polynomial.}
+\vincent{Note that this is not the M\"obius polynomial defined by Zaslavsky. I decided to take the dimension instead of the codimension.}
 \end{definition}
 
 \begin{theorem}[{\cite[Thm.~A]{Zaslavsky}}]
@@ -305,5 +306,5 @@ Number of vertices.
 \label{s:facets}
 
 We now specialize the results of the previous section to the case~$\ell = 2$ to derive enumerative results on the diagonal of the permutahedron.
-\vincent{TODO}
+\vincent{TODO. Nice bijection for vertices. Generating functions for facets and bounded facets.}
 
