--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -177,6 +177,15 @@
 
 \pgfplotsset{compat=1.12}
 
+% Others
+\newcommand{\ie}{\textit{i.e.},~} % id est
+\newcommand{\etc}{\textit{etc.}} % et cetera
+\newcommand{\eg}{\textit{e.g.},~} % exempli gratia
+\newcommand{\set}[2]{\left\{ #1 \;\middle|\; #2 \right\}} % set notation
+\newcommand{\eqdef}{\mbox{\,\raisebox{0.2ex}{\scriptsize\ensuremath{\mathrm:}}\ensuremath{=}\,}} % :=
+\newcommand{\defn}[1]{\textsl{\darkblue #1}} % emphasis of a definition
+\newcommand{\ssm}{\smallsetminus} % small set minus
+
 % ----------------------------------------------------------------
 
 \def\abovespace{\vspace{12pt}}
@@ -187,8 +196,3 @@
 \addtolength{\hoffset}{-0.0in} \addtolength{\textwidth}{0in}
 \addtolength{\voffset}{-0.0in} \addtolength{\textheight}{0.0in}
 
-
-\newcommand{\set}[2]{\left\{ #1 \;\middle|\; #2 \right\}} % set notation
-\newcommand{\eqdef}{\mbox{\,\raisebox{0.2ex}{\scriptsize\ensuremath{\mathrm:}}\ensuremath{=}\,}} % :=
-\newcommand{\defn}[1]{\textsl{\darkblue #1}} % emphasis of a definition
-\newcommand{\ssm}{\smallsetminus} % small set minus
