--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -50,8 +50,9 @@ where~$F \le G$ ranges over all intervals of the flat poset~$\flatPoset$, and~$\
 \sum_{F \le G \le H} \mu_{\flatPoset}(F,G) = 0
 \]
 for all~$F, G, H \in \flatPoset$.
+\vincent{Characteristic polynomial = coefficient of~$x^d$ in~$\mobPol$.}
 \vincent{Whitney-number polynomial.}
-\vincent{Note that this is not the M\"obius polynomial defined by Zaslavsky. I decided to take the dimension instead of the codimension.}
+\vincent{Note that this is not exactly the M\"obius polynomial defined by Zaslavsky. I decided to take the dimension instead of the codimension.}
 \end{definition}
 
 \begin{theorem}[{\cite[Thm.~A]{Zaslavsky}}]
@@ -297,14 +298,148 @@ Note that~$3 \ell^2 + 2 \ell + 1$ is~\OEIS{A056109}, that~$\ell (3 \ell - 2)$ is
 \vincent{There is a weird connection between the first and the last. Namely, $3 \ell^2 - 4 \ell + 1 = 3 (\ell - 1)^2 + 2 (\ell - 1)$. Is there a bijective explanation on the arrangements?}
 \end{example}
 
-\begin{theorem}
-Number of vertices.
+\begin{theorem}[Number of vertices]
 \vincent{Berenice, the floor is yours...}
 \end{theorem}
+
+\begin{proof}
+\vincent{TODO}
+\end{proof}
+
+\begin{theorem}[Number of vertices refined]
+\vincent{TODO}
+\end{theorem}
+
+\begin{proof}
+\vincent{TODO}
+\end{proof}
 
 \subsection{Enumerative results for any diagonal} 
 \label{s:facets}
 
 We now specialize the results of the previous section to the case~$\ell = 2$ to derive enumerative results on the diagonal of the permutahedron.
 \vincent{TODO. Nice bijection for vertices. Generating functions for facets and bounded facets.}
+
+Note that
+\begin{align*}
+\mobPol[{\lBraidArrangement[1][2]}] & = 1 \\
+\mobPol[{\lBraidArrangement[2][2]}] & = x y - 2 x + 2 \\
+\mobPol[{\lBraidArrangement[3][2]}] & = x^2 y^2 - 6 x^2 y + 10 x^2 + 6 x y - 18 x + 8 \\
+\mobPol[{\lBraidArrangement[4][2]}] & = x^3 y^3 - 12 x^3 y^2 + 52 x^3 y + 12 x^2 y^2 - 84 x^3 - 96 x^2 y + 216 x^2 + 44 x y - 182 x + 50 \\
+\mobPol[{\lBraidArrangement[5][2]}] & = x^4 y^4 - 20 x^4 y^3 + 160 x^4 y^2 + 20 x^3 y^3 - 620 x^4 y - 300 x^3 y^2 + 1008 x^4 + 1640 x^3 y \\ & \quad+ 140 x^2 y^2 - 3360 x^3 - 1430 x^2 y + 4130 x^2 + 410 x y - 2210 x + 432
+\end{align*}
+which can be seen on matrices as
+\[
+\left(\begin{array}{r}
+1
+\end{array}\right)
+\left(\begin{array}{rr}
+2 & -2 \\
+0 & 1
+\end{array}\right)
+\left(\begin{array}{rrr}
+8 & -18 & 10 \\
+0 & 6 & -6 \\
+0 & 0 & 1
+\end{array}\right)
+\left(\begin{array}{rrrr}
+50 & -182 & 216 & -84 \\
+0 & 44 & -96 & 52 \\
+0 & 0 & 12 & -12 \\
+0 & 0 & 0 & 1
+\end{array}\right)
+\left(\begin{array}{rrrrr}
+432 & -2210 & 4130 & -3360 & 1008 \\
+0 & 410 & -1430 & 1640 & -620 \\
+0 & 0 & 140 & -300 & 160 \\
+0 & 0 & 0 & 20 & -20 \\
+0 & 0 & 0 & 0 & 1
+\end{array}\right)
+%\left(\begin{array}{r}
+%1
+%\end{array}\right)
+%\left(\begin{array}{rr}
+%2 & 0 \\
+%-2 & 1
+%\end{array}\right)
+%\left(\begin{array}{rrr}
+%8 & 0 & 0 \\
+%-18 & 6 & 0 \\
+%10 & -6 & 1
+%\end{array}\right)
+%\left(\begin{array}{rrrr}
+%50 & 0 & 0 & 0 \\
+%-182 & 44 & 0 & 0 \\
+%216 & -96 & 12 & 0 \\
+%-84 & 52 & -12 & 1
+%\end{array}\right)
+%\left(\begin{array}{rrrrr}
+%432 & 0 & 0 & 0 & 0 \\
+%-2210 & 410 & 0 & 0 & 0 \\
+%4130 & -1430 & 140 & 0 & 0 \\
+%-3360 & 1640 & -300 & 20 & 0 \\
+%1008 & -620 & 160 & -20 & 1
+%\end{array}\right)
+%\left(\begin{array}{rrrrrr}
+%4802 & 0 & 0 & 0 & 0 & 0 \\
+%-31922 & 4732 & 0 & 0 & 0 & 0 \\
+%82560 & -23100 & 1830 & 0 & 0 & 0 \\
+%-104400 & 41560 & -6210 & 340 & 0 & 0 \\
+%64800 & -32760 & 6960 & -720 & 30 & 0 \\
+%-15840 & 9568 & -2580 & 380 & -30 & 1
+%\end{array}\right)
+\]
+
+\begin{theorem}
+There are bijections between
+\begin{itemize}
+\item the vertices of the $(2,n)$-braid arrangement~$\lBraidArrangement[n][2]$,
+\item the $(2,n)$-trees (\ie pairs of partitions whose intersection graph is a tree),
+\item the spanning trees of the complete graph~$K_{n+1}$ on~$\{0, \dots, n\}$ containing the edge~$(0,1)$.
+\end{itemize}
+These sets are counted by
+\[
+2 (n + 1)^{n-2}.
+\]
+\end{theorem}
+
+\begin{proof}
+\vincent{TODO}
+See \cref{fig:tree}.
+%
+\begin{figure}
+	\centerline{\includegraphics[scale=1]{tree}}
+	\caption{The bijection from rooted $(\ell,n)$-trees (left) to spanning trees of~$K_{n+1}$ containing the edge~$(0,1)$ (right).}
+	\label{fig:tree}
+\end{figure}
+\end{proof}
+
+\begin{theorem}[Number of vertices refined]
+\vincent{TODO}
+\end{theorem}
+
+\begin{proof}
+\vincent{TODO}
+\end{proof}
+
+\begin{theorem}
+The coefficient of~$x^{n-1}$ in the M\"obius polynomial~$\mobPol[{\lBraidArrangement[n][2]}]$ of the $(2,n)$-braid arrangement~$\lBraidArrangement[n][2]$ is given by
+\[
+[x^{n-1}] \, \mobPol[{\lBraidArrangement[n][2]}] = \frac{(n+1)!}{y} \, [z^{n+1}] \, \exp \big( \sum_{m \ge 1} \frac{- y \, z^m}{m(m+1)} \binom{2m}{m} \big).
+\]
+\end{theorem}
+
+\begin{proof}
+We prove that the exponential generating function of the coefficient of~$x^{n-1}$ in the M\"obius polynomial~$\mobPol[{\lBraidArrangement[n][2]}]$ is given by
+\[
+1 + \sum_{n \ge 1} \frac{[x^{n-1}] \, \mobPol[{\lBraidArrangement[n][2]}] \, y \, z^{n+1}}{(n+1)!} = \exp \left( \sum_{m \ge 1} \frac{- y \, z^m}{m(m+1)} \binom{2m}{m} \right).
+\]
+\end{proof}
+
+\begin{corollary}
+The exponential generating functions of the number of regions and of bounded regions of the $(2,n)$-braid arrangement~$\lBraidArrangement[n][2]$ are given by
+\[
+\sum_{n \ge 1} 
+\]
+\end{corollary}
 
