--- a/paper/Poissons.tex
+++ b/paper/Poissons.tex
@@ -3,7 +3,7 @@
 % AMS-LaTeX Paper ************************************************
 % **** -----------------------------------------------------------
 \documentclass[11pt]{amsart}
-\usepackage{graphicx, mathabx, amssymb,amsfonts,amsmath,amsthm,newlfont,mathtools}
+\usepackage{graphicx, amssymb,amsfonts,amsmath,amsthm,newlfont,mathtools} % mathabx
 \usepackage{epsfig,url}
 \usepackage[usenames,dvipsnames]{color}
 \usepackage{enumerate}
