ajout preuve formule sommets + formule raffinée

--- a/paper/Poissons.bib
+++ b/paper/Poissons.bib
@@ -1,3 +1,18 @@
+@Article{CKSS04,
+ Author = {Cho, Manwon and Kim, Dongsu and Seo, Seunghyun and Shin, Heesung},
+ Title = {Colored {Pr{\"u}fer} codes for {{\(k\)}}-edge colored trees},
+ FJournal = {The Electronic Journal of Combinatorics},
+ Journal = {Electron. J. Comb.},
+ ISSN = {1077-8926},
+ Volume = {11},
+ Number = {1},
+ Pages = {research paper n10, 7},
+ Year = {2004},
+ Language = {English},
+ Keywords = {05C05,05C30},
+ zbMATH = {2161291},
+ Zbl = {1060.05021}
+}
 
 @article{DP15,
   title = {Weak Cat-Operads},
