--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -126,6 +126,17 @@
 \newcommand{\green}{\color{green}} % green command
 \newcommand{\darkblue}{\color{darkblue}} % darkblue command
 
+\usepackage{xcolor}
+\newcommand{\coula}{0785F2}
+\newcommand{\coulb}{F29F05}
+\newcommand{\coulc}{F21313}
+\newcommand{\could}{E6F21F}
+
+\definecolor{part1}{HTML}{\coula}
+\definecolor{part2}{HTML}{\coulb}
+\definecolor{part3}{HTML}{\coulc}
+\definecolor{part4}{HTML}{\could}
+
 %OEIS
 \newcommand{\OEIS}[1]{{\rm \href{http://oeis.org/#1}{\texttt{#1}}}}
 
